--- a/index.css
+++ b/index.css
@@ -13,23 +13,31 @@
 
         The <div> inside that div, containing two paragraphs with the text "CSS Flexbox is a one-dimensional...", and "CSS Grid is a two-dimensional..." must (on screens with a minimum width of 800px) also be a grid with an 'auto' number of rows and two columns of 1fr. Additionally it must have a gap between the columns of width 2em
 */
+
+@media only screen and (min-width: 800px){
 header{
-display: grid;
-    @media only screen and (min-width: 800px){
-        grid-template-rows: auto;
-        grid-template-columns: 1fr 1fr;
-    }
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+}
 }
 
+@media only screen and (min-width: 800px){
 header > div{
-display:grid;
-    @media only screen and (min-width: 800px){
-        grid-template-rows: 'max-content max-cotent';
-        grid-template-columns: auto;
-    }
+    display:grid;
+    grid-template-rows: 'max-content max-cotent';
+    grid-template-columns: auto;
+}
 }
 
-
+@media only screen and (min-width: 800px){
+.bg-pink > div{
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+}
+}
 
 
 /*
@@ -55,6 +63,27 @@ display:grid;
 
         The <div> inside the section must start at column two and span two columns, start at row three and span three columns
 */
+
+#flexbox{
+    display: flex;
+    flex-direction: column;
+
+}
+
+#canvas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#flexbox > h2{
+@media only screen and (min-width: 800px){
+    font-size: 6em;
+}
+}
+
+
+
 
 /*
     <footer>
